assets/css/main.css
/* Roboto Regular Font*/
@font-face {
    font-family: "Roboto";
    src:    url("../fonts/roboto/Roboto-Light.eot");
    src:    url("../fonts/roboto/Roboto-Light.eot?#iefix") format('embedded-opentype'),
            url("../fonts/roboto/Roboto-Light.woff2") format('woff2'),
            url("../fonts/roboto/Roboto-Light.woff") format('woff'),
            url("../fonts/roboto/Roboto-Light.ttf") format('truetype');
    font-weight: 300;
    font-style: normal;
}

@font-face {
    font-family: "Roboto";
    src:    url("../fonts/roboto/Roboto-Regular.eot");
    src:    url("../fonts/roboto/Roboto-Regular.eot?#iefix") format('embedded-opentype'),
            url("../fonts/roboto/Roboto-Regular.woff2") format('woff2'),
            url("../fonts/roboto/Roboto-Regular.woff") format('woff'),
            url("../fonts/roboto/Roboto-Regular.ttf") format('truetype');
    font-weight: 400;
    font-style: normal;
} 

@font-face {
    font-family: "Roboto";
    src:    url("../fonts/roboto/Roboto-Medium.eot");
    src:    url("../fonts/roboto/Roboto-Medium.eot?#iefix") format('embedded-opentype'),
            url("../fonts/roboto/Roboto-Medium.woff2") format('woff2'),
            url("../fonts/roboto/Roboto-Medium.woff") format('woff'),
            url("../fonts/roboto/Roboto-Medium.ttf") format('truetype');
    font-weight: 500;
    font-style: normal;
}

@font-face {
    font-family: "Raleway";
    src:    url("../fonts/Raleway/Raleway-SemiBold.ttf");
    src:    url("../fonts/Raleway/Raleway-SemiBold.eot?#iefix") format('embedded-opentype'),
            url("../fonts/Raleway/Raleway-SemiBold.woff2") format('woff2'),
            url("../fonts/Raleway/Raleway-SemiBold.woff") format('woff'),
            url("../fonts/Raleway/Raleway-SemiBold.ttf") format('truetype');
    font-weight: 600;
    font-style: normal;
}

@font-face {
    font-family: "Raleway";
    src:    url("../fonts/raleway/Raleway-Regular.eot");
    src:    url("../fonts/raleway/Raleway-Regular.eot?#iefix") format('embedded-opentype'),
            url("../fonts/raleway/Raleway-Regular.woff2") format('woff2'),
            url("../fonts/raleway/Raleway-Regular.woff") format('woff'),
            url("../fonts/raleway/Raleway-Regular.ttf") format('truetype');
    font-weight: 400;
    font-style: normal;
}

@font-face {
    font-family: "Raleway";
    src:    url("../fonts/raleway/Raleway-Bold.eot");
    src:    url("../fonts/raleway/Raleway-Bold.eot?#iefix") format('embedded-opentype'),
            url("../fonts/raleway/Raleway-Bold.woff2") format('woff2'),
            url("../fonts/raleway/Raleway-Bold.woff") format('woff'),
            url("../fonts/raleway/Raleway-Bold.ttf") format('truetype');
    font-weight: 700;
    font-style: normal;
}

body{
    padding: 0;
    margin: 0;
    font-family: "Roboto", sans-serif;
    font-size: 16px;
}

h1, h2, h3, h4, h5, h6, 
#header .navbar-area .navbar .navbar-nav,
#banner .banner-content p {
    font-family: "Raleway", sans-serif;
    font-weight: 600;
}

a {
    color: #0e314c;
    text-decoration: none;
    -webkit-transition: 0.5s;
    transition: 0.5s;
    display: inline-block;
    outline: 0 !important;
    background-color: transparent;
}

p{
    line-height: 1.7;
    margin-bottom: 15px;
    color: #7f7f7f;
}

a:hover {
    text-decoration: none;
}

img{
    height: auto;
    max-width: 100%;
    border: none;
    -webkit-border-radius: 0;
    border-radius: 0;
    -webkit-box-shadow: none;
    box-shadow: none;
}

/* Header >Top Header Area Css */
#header {
    position: absolute;
    left: 0;
    top: 0;
    z-index: 999;
    width: 100%;
    height: auto;
}

/* Header >Top Header Area Css */
#header .top-header{
    background-color: #65BCB9;
    padding:12px 0px  12px 0px;
}

/* Header > Top Header Area > Header Left Content Css */
#header .top-header .header-left-content p{
    color: #ffffff;
    margin: 0;
    line-height: 1.7;
    font-weight: 300;
    font-size: 16px;
}


/* Header > Top Header Area > Header Right Content Css */
#header .top-header .header-right-content ul {
    text-align: right;
    margin-bottom: 0;
    padding-left: 0;
}

#header .top-header .header-right-content ul li {
    display: inline-block;
    color: #ffffff;
    font-size: 14px;
    padding-left: 26px;
    position: relative;
    margin-right: 20px;
    text-align: left;
}

#header .top-header .header-right-content ul li:last-child {
    margin-right: 0;
}

#header .top-header .header-right-content ul li a{
    color: #ffffff;
}
#header .top-header .header-right-content ul li i {
    color: #ffffff;
    font-size: 16px;
    position: absolute;
    top: 3px;
    left: 0;
}

/* Navbar Area Css */
#header .navbar-area {
    background-color: transparent;
    -webkit-transition: 0.5s;
    transition: 0.5s;
    padding-top: 20px;
    padding-bottom: 20px;
}

#header .header-nav .navbar {
    padding-right: 0;
    padding-top: 0;
    padding-left: 0;
    padding-bottom: 0;
}


/* Navbar Area > Header Nav > Navbar Brand Css */
#header .header-nav .navbar-brand {
    color: rgba(0,0,0,.9);
    padding-top: 0;
    padding-bottom: 0;
}

#header .navbar-area .navbar-brand img {
    display: block !important;
}


/* Navbar Area > Header Nav > Main Menu Css */
#header .navbar-area .header-nav .navbar ul {
    padding-left: 0;
    list-style-type: none;
    margin-bottom: 0;
}

#header .navbar-area .header-nav .navbar .navbar-nav .nav-item {
    position: relative;
    padding: 10px 0px 10px 0px;
}

#header .navbar-area .header-nav .navbar .navbar-nav .nav-item > a {
    font-size: 17px;
    font-weight: 400;
    text-transform: capitalize;
    padding: 0;
    margin: 0px 15px 0px 15px;
    border-bottom: 1px solid transparent;
    
}

#header .navbar-area .header-nav .navbar .navbar-nav .nav-item a {
    color: #0e314c;
}

#header .navbar-area .header-nav .navbar .navbar-nav .nav-item  a:hover {
    color: #ee0979;
}
/* ... */

